@@ -116,12 +116,15 @@ class TooltipEntity extends Component {
                 </a>
               ) : null}
 
-              <button className="button Tooltip__button" onClick={this.onEdit}>
+              <button
+                className="button button-small Tooltip__button"
+                onClick={this.onEdit}
+              >
                 Edit
               </button>
 
               <button
-                className="button button-secondary no Tooltip__button"
+                className="button button-small button-secondary no Tooltip__button"
                 onClick={this.onRemove}
               >
                 Remove
