@@ -68,13 +68,13 @@ exports[`TooltipEntity #openTooltip 1`] = `
         www.example.com
       </a>
       <button
-        className="button Tooltip__button"
+        className="button button-small Tooltip__button"
         onClick={[Function]}
       >
         Edit
       </button>
       <button
-        className="button button-secondary no Tooltip__button"
+        className="button button-small button-secondary no Tooltip__button"
         onClick={[Function]}
       >
         Remove
