@@ -57,6 +57,7 @@ As part of tackling Wagtail’s technical debt and improving [CSP compatibility]
  * Add the ability to export snippets listing via `SnippetViewSet.list_export` (Sage Abdullah)
  * Add support for adding [HTML `attrs`](panels_attrs) on `FieldPanel`, `FieldRowPanel`, `MultiFieldPanel`, and others (Aman Pandey, Antoni Martyniuk, LB (Ben) Johnston)
  * Change to always cache renditions (Jake Howard)
+ * Update link/document rich text tooltips for consistency with the inline toolbar (Albina Starykova)
 
 ### Bug fixes
 
